--- a/k8s/deployments/mongodb-deployment.yml
+++ b/k8s/deployments/mongodb-deployment.yml
@@ -22,4 +22,8 @@ spec:
             - name: MONGO_INITDB_ROOT_USERNAME
               value: "admin"
             - name: MONGO_INITDB_ROOT_PASSWORD
-              value: "password" 
+              value: "password"
+      volumes:
+        - name: mongo-data
+          persistentVolumeClaim:
+            claimName: mongodb-pvc
